@@ -32,7 +32,7 @@ class Profiles(collection.Collection):
     def factory_produce(self,config,seed_data):
         return profile.Profile(config).from_datastruct(seed_data)
 
-    def remove(self,name,with_delete=True,with_triggers=True):
+    def remove(self,name,with_delete=True,with_sync=True,with_triggers=True):
         """
         Remove element named 'name' from the collection
         """
@@ -45,8 +45,9 @@ class Profiles(collection.Collection):
             if with_delete:
                 if with_triggers: 
                     self._run_triggers(obj, "/var/lib/cobbler/triggers/delete/profile/pre/*")
-                lite_sync = action_litesync.BootLiteSync(self.config)
-                lite_sync.remove_single_profile(name)
+                if with_sync:
+                    lite_sync = action_litesync.BootLiteSync(self.config)
+                    lite_sync.remove_single_profile(name)
             del self.listing[name]
             self.config.serialize_delete(self, obj)
             if with_delete:
