@@ -10,6 +10,9 @@ Cobbler CHANGELOG
 - Implemented fully pluggable authn/authz system
 - WebUI is now mod_python based
 - Greatly enhanced logging (goes to /var/log/cobbler/cobbler.log)
+- New --no-triggers and --no-sync on "adds" for performance and other reasons
+- pxe_just_once is now much faster.
+- performance testing scripts (in source checkout)
 - ...
 
 * Wed Nov 14 2007 - 0.6.4
